--- a/css/estilos.css
+++ b/css/estilos.css
@@ -103,8 +103,9 @@ h2
 
 .project
 {
-  border: 1px solid gray;
+  border: 0 solid gray;
   border-radius: 10px;
+  box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.1);
   margin-bottom: 15px;
   padding: 20px;
   background: white;
